Added one first event to feed

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -30,7 +30,7 @@
 
       <div class="ui divider"></div>
 
-      <h3 class="first">Feed</h3>
+      <h3 class="first"><a href='/feed'>Feed</a></h3>
       <div class="ui feed">
         {% for event in events|reverse %}
           <div class="event">
